fix search spacing

--- a/assets/css/_doc_guide.scss
+++ b/assets/css/_doc_guide.scss
@@ -379,10 +379,9 @@ $doc_transition_time : 0.25s;
   }
 }
 #doc-main-search {
-  margin-top: 20px;
   @media (min-width:  $window-xxlarge-px) {
     max-width: 1500px;
-    margin: auto;
+    margin: 20px auto auto auto;
   }
 }
 #footer_div {
